# AI_DFA

./: AutomataLearning.py  AutomatasState.py  Board.py  CMakeLists.txt  Constants.py  Dfa.py  Main.py  PolicyIteration.py  QLearning.py  Rmax.py  Show.py  State.py  StateGenericFunctions.py  StateWithAuto.py  env_class.py  legacy.py  room.py
GILearner/: dfa_creator.py  gi_learning.cp36-win_amd64.pyd  gi_learning.cpp  gi_learning.pyx  setup.py  test.py
GILearner/include/: BlueFringe.hpp  BlueRedDFA.hpp  BlueStar.hpp  DFA.hpp  EDSM.hpp  LSTAR.hpp  utilities.hpp
GILearner/src/: BlueFringe.cpp  BlueRedDFA.cpp  BlueStar.cpp  DFA.cpp  EDSM.cpp  EDSMSolver.cpp  LSTAR.cpp  gi-learning.cpp  utilities.cpp
